# rs-client.rs

./: Cargo.toml
src/: canonical_json.rs  client.rs  kinto_http.rs  main.rs  signatures.rs
