[package]
name = "rs-client"
version = "0.1.0"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
futures = "0.3"
openssl = "0.10"
reqwest = "0.10.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.0-alpha.6"
signatory = { version = "0.11", features = ["ecdsa", "encoding"]}
signatory-ring = "0.11"
